# aoc

./: README.md  flake.nix  shell.nix  update.sh
aoc2015/: Cargo.toml
aoc2015/src/: day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  lib.rs  utils.rs
aoc2016/: Cargo.toml
aoc2016/src/: day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  lib.rs
aoc2017/: Cargo.toml
aoc2017/src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs
aoc2018/: Cargo.toml
aoc2018/src/: day2.rs  day3.rs  day4.rs  lib.rs
aoc2019/: Cargo.toml
aoc2019/src/: day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  lib.rs  main.rs
aoc2020/: Cargo.toml
aoc2020/src/: day7.rs  lib.rs
aoc2021/src/: day9.rs  lib.rs
aoc2022/input/2022/: day15.txt
aoc2022/src/: day15.rs  lib.rs
aoc2023/: Cargo.toml  scratch
aoc2023/src/: day1.rs  day2.rs  day3.rs  lib.rs
aoc2024/src/: day1.rs  day2.rs  day3.rs  lib.rs
aoc2025/src/: day1.rs
npins/: sources.json
