[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
strum = { version = "0.26.3", features = ["derive"] }
